<resources>
    <string name="app_name">BIGO\nSAVERS</string>
    <string name="address">"I stay in "</string>
    <string name="signature">MEMBERSHIP</string>
    <string name="location">CURRENT LOCATION</string>
    <string name="about">ABOUT ME</string>
    <string name="profile">Profile</string>
    <string name="notification">Notification</string>
    <string name="total_notification">Total 10 Notification</string>
    <string name="cart">Cart</string>
    <string name="gold_member">GOLD MEMBERSHIP</string>
    <string name="offers">OFFERS INCLUDED</string>
    <string name="buy_now">SUBSCRIBE NOW</string>
    <string name="no_account">Dont have an Account?</string>
    <string name="text_signup">Sign Up</string>
    <string name="tv_password">Password</string>
    <string name="tv_username">Username</string>
    <string name="text_or">OR</string>
    <string name="Signin_with">Sign In with</string>
    <string name="fpass">Forgot Password?</string>
    <string name="hotel_worldwide">HOTEL WORLDWIDE</string>
    <string name="food"><![CDATA[FOOD & DRINKS]]></string>
    <string name="beauty"><![CDATA[HEALTH & BEAUTY]]></string>
    <string name="attr"><![CDATA[ATTRACTION & LEISURE]]></string>
    <string name="retail"><![CDATA[RETAIL & SERVICES]]></string>
    <string name="buy">BUY</string>
    <string name="gift">GIFT</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="area_distance">2186 Km</string>
    <string name="area">Area: </string>
    <string name="al">Place</string>
    <string name="name">City</string>
    <string name="dummy">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidun</string>
    <string name="additional">Additional Details</string>
    <string name="link">link</string>
    <string name="mail">ken@tobacaue.com</string>
    <string name="dress">Dress Code: Informal</string>
    <string name="cuisine">Cuisine: Other</string>
    <string name="group">Groups Welcome</string>
    <string name="dining">Fine Dining: No</string>
    <string name="kids">Kids Welcome</string>
    <string name="outdoor">Outdoor Sitting</string>
    <string name="park">Parking</string>
    <string name="smoke">Smoking: Outdoor</string>
    <string name="wheel">Wheelchair Accessible</string>
    <string name="offer">Title</string>
    <string name="redeemed_offer">Description</string>
    <string name="buyoffer">Buy 1 Get One</string>
    <string name="detail_name_offer">Al Majaz Corniche(2186 Km)</string>
    <string name="tv_favourites">Kivamus efficitur pellentes</string>
    <string name="tv_favourites_discunt">30% off</string>
    <string name="tv_top_row_alloffer">Merchant Name</string>
    <string name="number_of_outlets">5 Outlets</string>
    <string name="tv_new">NEW</string>
    <string name="tv_distance">5 KM</string>
    <string name="select">Select All</string>
    <string name="search">SEARCH</string>
    <string name="tv_from_cities">FROM TOP CITIES</string>
    <string name="city">City or location</string>
    <string name="membership">GOLD MEMBERSHIP</string>
    <string name="eveation_detail_text">huds jhbsdjv jhfbvs hjbjvs hiru vufhbv fuyvbef fyub urev fubvef h9r     reviuhvid jniuv iunvi iuhirvf iurniuv iun iuer viuejr viunier in9enfij  iunerin viernivn eriuhuds jhbsdjv jhfbvs hjbjvs hiru vufhbv fuyvbef fyub urev fubvef h9r     reviuhvid jniuv iunvi iuhirvf iurniuv iun iuer viuejr viunier in9enfij  iunerin viernivn eriuhuds jhbsdjv jhfbvs hjbjvs hiru vufhbv fuyvbef fyub urev fubvef h9r     reviuhvid jniuv iunvi iuhirvf iurniuv iun iuer viuejr viunier in9enfij  iunerin viernivn eriu</string>
    <string name="internet_link">htttp://elevationburger.com</string>
    <string name="tv_signature_membership">OFFERS AVAILABLE IN YOUR SIGNATURE MEMBERSHIP</string>
    <string name="tv_dubai_new">Dubai New Offers 2016</string>
    <string name="pmembership">PLATINUM MEMBERSHIP</string>
    <string name="favourites">Favourites</string>
    <string name="tv_subtitle_app_home">ANOTHER REASON TO GO OUT</string>
    <string name="take_a_tour">Take a Tour</string>
    <string name="already_account">Already have an Account ? Sign In</string>
    <string name="text_signup_saving">SIGNUP AND START SAVING</string>
    <string name="text_signup_saving_login">Sign Up and Start Saving</string>
    <string name="full_name">Full Name</string>
    <string name="first_name">First Name</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="mobile_num">Mobile Number</string>
    <string name="email_address">Email Address</string>
    <string name="last_name">Last Name</string>
    <string name="next">Next</string>
    <string name="tv_mobile_num">Mobile Number ( Ex: 9800000000)</string>
    <string name="select_city">SELECT YOUR CITY</string>
    <string name="must_try">MUST TRY</string>
    <string name="tv_location">Location: </string>
    <string name="name_of_city">Kolkata</string>
    <string name="find_out_more">Find Out More</string>
    <string name="cannot_empty">This field cannot be empty</string>
    <string name="number_cannot_empty">Please enter 10 digit mobile number</string>
    <string name="register_successful">You are Registered Successfully</string>
    <string name="password_not_match">Password and Confirm Password does not match</string>
    <string name="username_not_empty">User name can not be empty</string>
    <string name="things_do">THINGS TO DO</string>
    <string name="hotel_resorts"><![CDATA[HOTEL & RESORTS]]></string>
    <string name="mobile_verification_error">Mobile verifiaction failed</string>
    <string name="social_login_error">Unable to process login request</string>
    <string name="select_your_city">Please select your city</string>
    <string name="gps_not_found_title">Location is not enabled</string>
    <string name="gps_not_found_message">Turn on location to get nearby deals and offers</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="outlet_information">Outlet Information</string>
    <string name="more_information">More Information</string>
    <string name="trial_membership">TRIAL MEMBERSHIP</string>
    <string name="my_information">My Information</string>
    <string name="sheikh">Sheikh</string>
    <string name="nawab">Nawab</string>
    <string name="email_add">Email</string>
    <string name="nawab_islam_gmail_com">nawab.islam@gmail.com</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="_26_08_1994">26/08/1994</string>
    <string name="nationality">Nationality</string>
    <string name="india">india</string>
    <string name="country_of_residence">Country Of Residence</string>
    <string name="united_arab_emirates">United Arab Emirates</string>
    <string name="mobile">Mobile Number</string>
    <string name="currency_preference">Currency Preference</string>
    <string name="aed">AED</string>
    <string name="receive_entertainer_emails">Receive Entertainer Emails?</string>
    <string name="re_push_notification">Receive Push Notification?</string>
    <string name="membership_valid_to">Membership Valid till</string>
    <string name="forget_password">Forgot Password</string>
    <string name="re_enter_new_password">Re-enter New Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="forgot_password_heading">Please enter your registered mobile number and your new password below and click on the continue button.</string>
    <string name="forgot_password_footer">We will send you an OTP  for Mobile Verification.\nPlease make sure you have access to your phone.</string>
    <string name="enter_your_cash_card_code_below">Enter your Cash Card Code below</string>
    <string name="apply">Apply</string>
    <string name="confirm">Confirm</string>
    <string name="you_have_entered_cash_card_code">You have entered Cash Card Code :</string>
    <string name="current_membership">Your Current Membership is :</string>
    <string name="gold_membership">GOLD Membership</string>
    <string name="bigodron">BIGODRON</string>
    <string name="validity">Current Membership Validity :</string>
    <string name="bigo_drinks_will_be_activated_in_your_membership">BIGO Drinks will be activated in your Membership.</string>
    <string name="hello_nitin">Hello User,</string>
    <string name="iconfirm_i_am_of_legal_drinking_age">I confirm I am of legal drinking age.</string>
    <string name="you_will_be_upgraded_to">You will be upgraded to:</string>
    <string name="_20_nov_2016">20 Nov 2016</string>
    <string name="view_merchants">View Merchants</string>
    <string name="description_membership">Description</string>
    <string name="subscribe_now">Subscribe Now</string>
    <string name="subscription_amount">SUBSCRIPTION AMOUNT :</string>
    <string name="_999_inr">999 INR</string>
    <string name="subscription_validity">SUBSCRIPTION VALIDITY</string>
    <string name="select_duration">Select Duration :</string>
    <string name="_1_month">1 Month</string>
    <string name="_12_month">12 Months</string>
    <string name="have_code">Have a Promo Code?</string>
    <string name="no_response">No repsonse</string>
    <string name="short_password">Minimum password length is 4 characters</string>
    <string name="validity1">Validity</string>
    <string name="country">Country</string>
    <string name="locations">Location</string>
    <string name="cashcard">Cash Card Code</string>
    <string name="change_password">Change Password</string>
    <string name="success_forgot_password">Password changed successfully</string>
    <string name="by_subscribing_i_agree_tothe_terms_of_use">By Subscribing I agree to the Terms of Use</string>
    <string name="place">Name of place</string>
    <string name="buffet">Buffet</string>
    <string name="successfully_redeemed">Successfully Redeemed</string>
    <string name="reference_number">Reference Number :</string>
    <string name="set_ref_no">K-16-09-100001</string>
    <string name="saved_upto">Saved Upto :</string>
    <string name="inr_900">INR 500</string>
    <string name="offers_are_sub">Offers are Subjected to Rules &amp; Guidelines</string>
    <string name="term_cond">Terms n Condition</string>
    <string name="bigo_offer">BIGO OFFER</string>
    <string name="please_ask_jing">Please ask jing Asiea to enter their code</string>
    <string name="tv_est_saving">Estimated Savings: </string>
    <string name="cfont_tv_est_saving">INR 1999</string>
    <string name="medium_pizza">Medium Pizza</string>
    <string name="are_you_sure_you_want_to_update_your_mobile_nubmer">Are you sure you want to update your mobile nubmer?</string>
    <string name="your_current_mobile_number_is">Your current mobile number is:</string>
    <string name="enter_new_mobile_number_ex_9800000000">Enter new mobile number Ex. 9800000000</string>
    <string name="we_will_send_you_an_otp_for_mobile_verification">We will send you an OTP for Mobile verification.</string>
    <string name="please_make_sure_you_have_access_to_your_phone">Please make sure you have access to your phone.</string>
    <string name="default_number">980000000</string>
    <string name="you_have_successfully_updated_your_mobile_number_to">You have successfully updated your mobile number to:</string>
    <string name="new_membership_validity">New Membership Validity :</string>
    <string name="city_name">City</string>
</resources>