<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/view_mobile_confirmation"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:background="@color/white"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical"
        android:paddingBottom="@dimen/padding_8dp">

        <simplifii.framework.widgets.CustomFontTextView
            android:id="@+id/tv_name"
            style="@style/cash_card_detail"
            android:layout_marginLeft="@dimen/margin_12dp"
            android:layout_marginTop="@dimen/margin_20dp"
            android:text="@string/hello_nitin"
            android:visibility="gone" />




        <RelativeLayout
            style="@style/rl_cash_code_detail"
            android:layout_width="wrap_content">

            <simplifii.framework.widgets.CustomFontTextView
                android:id="@+id/tv_membership_name"
                style="@style/cash_card_detail"
                android:text="@string/you_have_successfully_updated_your_mobile_number_to" />

        </RelativeLayout>

        <RelativeLayout
            style="@style/rl_cash_code_detail"
            android:layout_width="wrap_content">

            <simplifii.framework.widgets.CustomFontTextView
                android:id="@+id/tv_new_number"
                style="@style/cash_card_detail"
                android:text="@string/default_number"
                android:textColor="@color/et_gray" />

        </RelativeLayout>

        <Button
            android:id="@+id/btn_done"
            android:layout_width="180dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_20dp"
            android:background="@drawable/button_drink"
            android:text="@string/done"
            android:textColor="@color/white" />

    </LinearLayout>


</LinearLayout>
